@@ -2,7 +2,20 @@
 # Released subject to the New BSD License
 # Please see http://en.wikipedia.org/wiki/BSD_licenses
 
-__version__ = '0.8-dev'
+# version_info provides the version number in programmer friendly way.
+# The 4th part will be either alpha, beta or final.
+version_info = (0, 8, 0, 'alpha') 
+
+def _imapclient_version_string(vinfo):
+    major, minor, micro, releaselevel = vinfo
+    v = '%d.%d' % (major, minor)
+    if micro != 0:
+        v += '.%d' % micro
+    if releaselevel != 'final':
+        v += '-' + releaselevel
+    return v
+        
+__version__ = _imapclient_version_string(version_info)
 __author__ = 'Menno Smits <menno@freshfoo.com>'
 
 from imapclient import *
